tests/lean/8554.lean.expected.out
8554.lean:30:0-30:8: error: (kernel) declaration type mismatch, 'magic_eq' has type
  magic = magic
but it is expected to have type
  magic = isProp
'contradiction' depends on axioms: [magic, magic_eq]
